--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing Git</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>I can create a new github account</h1>
     <h3>Now i am create my self as a developer</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt molestiae recusandae atque ex maxime
+        exercitationem aliquam ipsam, dolorem possimus explicabo eligendi voluptatem sed, quam corporis voluptatum,
+        repellat deserunt dicta velit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti perspiciatis doloremque amet quibusdam maiores.
+        Recusandae pariatur est, beatae, quas tempore dolorum et sint laboriosam aperiam maxime possimus maiores
+        sapiente soluta.</p>
 </body>
 
 </html>
