--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti perspiciatis doloremque amet quibusdam maiores.
         Recusandae pariatur est, beatae, quas tempore dolorum et sint laboriosam aperiam maxime possimus maiores
         sapiente soluta.</p>
+
+    <div class="form-style">
+        <p>Please Fillup The Form!</p>
+        <form action="">
+            <input type="text" placeholder="Your Name" class="form-information"><br>
+            <input type="email" placeholder="Email" class="form-information"><br>
+            <input type="password" placeholder="password" class="form-information"><br>
+            <button class="save-button all-button">Save</button>
+            <button class="all-button">Clear</button>
+        </form>
+    </div>
 </body>
 
 </html>
